fixed bug with main image not spanning on iOS

--- a/css/creative.css
+++ b/css/creative.css
@@ -171,56 +171,56 @@ body {
 
 /* Portrait tablet to landscape and desktop */
 /* Large desktop */
-header.masthead {
+header.mast-head {
   font-family: 'Montserrat', sans-serif;
   position: relative;
   width: 100%;
   min-height: auto;
   text-align: center;
   color: white;
-  background-image: url("../img/phish1.jpg");
+  background-image: url("../img/phish1.png");
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; }
-  header.masthead .header-content {
+  header.mast-head .header-content {
     position: relative;
     width: 100%;
     padding: 150px 15px 100px;
     text-align: center; }
-    header.masthead .header-content .header-content-inner .should {
+    header.mast-head .header-content .header-content-inner .should {
       color: #009933; }
-    header.masthead .header-content .header-content-inner h1 {
+    header.mast-head .header-content .header-content-inner h1 {
       font-size: 30px;
       font-weight: 700;
       margin-top: 0;
       margin-bottom: 0; }
-    header.masthead .header-content .header-content-inner hr {
+    header.mast-head .header-content .header-content-inner hr {
       margin: 30px auto; }
-    header.masthead .header-content .header-content-inner p {
+    header.mast-head .header-content .header-content-inner p {
       font-size: 16px;
       font-weight: 300;
       margin-bottom: 50px;
       color: rgba(255, 255, 255, 0.7); }
   @media (min-width: 768px) {
-    header.masthead {
+    header.mast-head {
       height: 85%;
       min-height: 600px; }
-      header.masthead .header-content {
+      header.mast-head .header-content {
         position: absolute;
         top: 50%;
         padding: 0 50px;
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%); }
-        header.masthead .header-content .header-content-inner {
+        header.mast-head .header-content .header-content-inner {
           max-width: 1000px;
           margin-right: auto;
           margin-left: auto; }
-          header.masthead .header-content .header-content-inner h1 {
+          header.mast-head .header-content .header-content-inner h1 {
             font-size: 50px; }
-          header.masthead .header-content .header-content-inner p {
+          header.mast-head .header-content .header-content-inner p {
             font-size: 18px;
             max-width: 80%;
             margin-right: auto;
